data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3082.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\97\80\80\80\00\01\03\65\6e\76\0f\65"
    "\78\74\65\72\6e\61\6c\5f\72\65\74\75\72\6e\00\00"
    "\03\82\80\80\80\00\01\00\0a\a7\80\80\80\00\01\a1"
    "\80\80\80\00\01\01\7f\41\0a\21\00\02\40\03\40\20"
    "\00\41\01\6b\21\00\10\00\20\00\45\0d\01\0c\00\0b"
    "\0b\10\00\0f\0b"
  )
""
)